--- a/css/qt.css
+++ b/css/qt.css
@@ -278,3 +278,31 @@ ul>li {
   text-align: left;
   padding-left: 10px;
 }
+
+table.available {
+    width: 100%;
+    font-size: 65%;
+    border: 1px solid white;
+}
+table.available td {
+  border: 1px solid white;
+  text-align: center;
+}
+td.found {
+  background: var(--qt-neon);
+}
+td.notfound {
+  background: #ff6961;
+}
+
+td.wontdo {
+  background: var(--qt-mandarin);
+}
+td.wip {
+  background: #FFD43B;
+  color: black;
+}
+td.empty {
+  background: #646464;
+}
+
